[package]
name = "gaycats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
eggbug = "0.1.3"
mime_guess = "2.0.4"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
